Set gitlab pipeline branch to zeus
Signed-off-by: Laurent Bonnans <laurent.bonnans@here.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,7 +30,7 @@ Checkout:
 
   stage: checkout
   variables:
-    MANIFEST: master
+    MANIFEST: zeus
     CURRENT_PROJECT: meta-updater-qemux86-64
   except:
     - pushes
