--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ stages:
   - docker
   - checkout
   - test
+  - trigger
 
 variables:
   BITBAKE_IMAGE: ${METAUPDATER_REGISTRY_IMAGE}:ci-master-bitbake
@@ -54,3 +55,14 @@ Oe-selftest qemux86_64:
     OE_SELFTESTS: 'updater_native updater_qemux86_64'
   except:
     - pushes
+
+# -- otf
+
+trigger-otf-on-pr:
+  stage: trigger
+  when: always
+  except:
+    - pushes
+  script:
+    - apk add --no-cache curl
+    - curl -X POST -F "token=$CI_JOB_TOKEN" -F "ref=master" -F "variables[BITBAKE_JOB_ONLY]=true" -F "variables[BITBAKE_ENV]=zeus" -F "variables[PROJECT_NAME]=meta-updater-qemux86-64" -F "variables[PROJECT_SHA]=$CI_COMMIT_SHA" https://main.gitlab.in.here.com/api/v4/projects/163/trigger/pipeline
